--- a/index.html
+++ b/index.html
@@ -5,6 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>High school website</title>
+   
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+    <link href="http://netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap.min.css" rel="stylesheet">
+    <link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
+    <script src="http://netdna.bootstrapcdn.com/bootstrap/3.0.3/js/bootstrap.min.js"></script>
+    <script src="build/bootstrap-rating-input.min.js"></script>
+    <script src="index2.js"></script>
 </head>
 <body>
     <head>
@@ -20,6 +27,7 @@
           <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
     </head>
         <body id="home">
+            
         <nav class="navbar_top">
             <div class="logo">Byblos high school</div>
             <ul class="nav-links">
@@ -27,6 +35,7 @@
                 <label for="checkbox_toggle" class="bar_icon">&#9776;</label>
                 <div class="menu">
                     <li><a href="#home">Home</a></li>
+                    <li><a href=".//login/index1.html">login</a></li>
                     <li><a href="#features">Join us</a></li>
                     <li><a href="#image">Images</a></li>
                     <li><a href="#course">Courses</a></li>
@@ -143,7 +152,7 @@
                 <div class="col-sm-6">
                     <div class="card">
                         <div class="card-body">
-                            <img src="./photos/campus.jpg " width="100%" />
+                            <img src="./images/home.jpg " width="100%" />
                         </div>
                     </div>
                 </div>
@@ -177,7 +186,7 @@
                     </div>
                     <div class="row text-center">
                         <div class="col-sm-12">
-                            <input type="text" class="input_size" name="fname" id="fname" placeholder="Your Name"/>
+                            <input type="text" class="input_size" name="fname" id="fname"  placeholder="Your Name"/>
                             <input type="email" class="input_size" name="email" id="email" placeholder="Your Email"/>
                             <textarea class="input_size" rows="7" name="message" id="message" placeholder="Message"></textarea>
                             <button type="submit" class="input_btn">SUBMIT REQUEST</button>
@@ -199,6 +208,7 @@
                 <div class="col-sm-6">
                     <h1><span class="">Social Conectivity</span></h1>
                     <div>
+                        <p><span>My rating :</span> <input type="number" name="your_awesome_parameter" id="rating1" class="rating" data-clearable="remove"/></p>
                         <i class="fa fa-facebook fa_social"></i>
                         <i class="fa fa-linkedin fa_social"></i>
                         <i class="fa fa-instagram fa_social"></i>
@@ -210,7 +220,7 @@
         <div class="container-fluid">
             <div class="row text-center">
                 <div class="col-sm-12 footer">
-                    All Rights Reserved | Design by : Mhamad & haydar &  ahmad 
+                    All Rights Reserved | Design by : MhamadYoussef & MhamadHaydar &  AhmadHoussein 
                 </div>
             </div>
         </div>
