--- a/index.html
+++ b/index.html
@@ -5,6 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>High school website</title>
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+    <link href="http://netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap.min.css" rel="stylesheet">
+    <link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
+    <script src="http://netdna.bootstrapcdn.com/bootstrap/3.0.3/js/bootstrap.min.js"></script>
+    <script src="build/bootstrap-rating-input.min.js"></script>
+    
 </head>
 <body>
     <head>
@@ -18,6 +24,7 @@
           <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
           <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
           <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+          <script src="index2.js"></script>
     </head>
         <body id="home">
         <nav class="navbar_top">
@@ -28,6 +35,7 @@
                 <label for="checkbox_toggle" class="bar_icon">&#9776;</label>
                 <div class="menu">
                     <li><a href="#home">Home</a></li>
+                    <li><a href=".//login/index1.html">login</a></li>
                     <li><a href="#features">Join us</a></li>
                     <li><a href="#slideshow">Images</a></li>
                     <li><a href="#course">Courses</a></li>
@@ -192,8 +200,11 @@
                 <div class="col-sm-6">
                     <h1><span class="">Social Conectivity</span></h1>
                     <div>
+                        <p style="font-size:large;"><span>My rating :</span> <input type="number" name="your_awesome_parameter" id="rating1" class="rating" data-clearable="remove"/></p>
                         <i class="fa fa-facebook fa_social"></i>
-                        <i class="fa fa-linkedin fa_social"></i>
+                        <i  class="fa fa-linkedin fa_social" >
+                         
+                        </i>
                         <i class="fa fa-instagram fa_social"></i>
                     </div>
                 </div>
@@ -203,7 +214,7 @@
         <div class="container-fluid">
             <div class="row text-center">
                 <div class="col-sm-12 footer">
-                    All Rights Reserved | Design by : Mhamad & haydar &  ahmad 
+                    All Rights Reserved | Design by :  MhamadYoussef & MhamadHaydar &  AhmadHoussein 
                 </div>
             </div>
         </div>
@@ -212,6 +223,7 @@
     <!--<div class="loader-container">
         <img src="images/Classes.gif" alt="">
     </div> -->
+    <script src="index2.js"></script>
     </body>
 </body>
 </html>
