--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
                             <input type="text" class="input_size" name="fname" id="fname" placeholder="Your Name"/>
                             <input type="email" class="input_size" name="email" id="email" placeholder="Your Email"/>
                             <textarea class="input_size" rows="7" name="message" id="message" placeholder="Message"></textarea>
-                            <button type="submit" class="input_btn">SUBMIT REQUEST</button>
+                            <button id="submit" type="submit" class="input_btn">SUBMIT REQUEST</button>
                         </div>
                     </div>
                 </div>
@@ -193,7 +193,7 @@
                 <div class="col-sm-6">
                     <div class="card">
                         <div class="card-body">
-                            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3552.334566422665!2d75.73763456012502!3d27.082744806662184!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x396dadfa8f444f5f%3A0x98ef301b3278e271!2sPusp%20Vatika!5e0!3m2!1sen!2sin!4v1636813692739!5m2!1sen!2sin" width="100%" style="border:1px solid green;" allowfullscreen="" loading="lazy"></iframe>
+                            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3305.2460208746047!2d35.64724281517154!3d34.06320708060299!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x151f438916e87fb1%3A0xd8c9dcaad7abef00!2sLe%20CNAM!5e0!3m2!1sfr!2slb!4v1673082574626!5m2!1sfr!2slb" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade" width="100%" style="border:1px solid green;" allowfullscreen="" loading="lazy"></iframe>
                         </div>
                     </div>
                 </div>
@@ -207,6 +207,20 @@
                         </i>
                         <i class="fa fa-instagram fa_social"></i>
                     </div>
+                    <br>
+                    <div>
+                        <details style="font-size: large;">
+                        <br>
+                        <strong>phone number:</strong>
+                        +1(914)520-6668
+                        
+                           <div> <strong>mail:</strong> ahmad.houssein@isae.edu.lb</strong></div>
+                            <div> <strong>mail:</strong> mhamad.youssef@isae.edu.lb</strong></div>
+                             <div> <strong>mail:</strong> mhammad.haidar@isae.edu.lb</strong></div>
+                            
+                         </details> 
+
+                    </p></div>
                 </div>
             </div>
         </div>
